# MPI

./: CMakeLists.txt  main.cpp
tasks/: final86Task.cpp  finalTask.cpp  task1.cpp  task10.cpp  task11.cpp  task13.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp  tasks.h
